--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/JJ-xyz/task2complete_ui#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "engines": {
+      "node": "7.0.0"
+    }
   }
 }
